* webhelpers.html.converters:

  - Re-add import of ``render`` and ``sanitize`` from
    ``webhelpers.html.render``.  That module is not public.

* webhelpers.misc:

  - New exception ``OverwriteError``.
  - Add ``exclude`` argument to ``subclasses_only``.

* webhelpers.text:
  - Disable ``convert_misc_characters``: it fails its doctests and there's
    no consensus on what it should do.

1.0b4 (2010-01-24)
------------------

* Delete ``webhelpers.string24``.  WebHelpers no longer supports Python 2.3.

* webhelpers.feedgenerator:

  - Add a basic ``Geometry`` class for the Geo helpers.

* webhelpers.html.grid_demo:

  - Demonstrates ``webhelpers.html.grid``. Run as 
    "python -m webhelpers.html.grid_demo OUTPUT_DIRECTORY".

* webhelpers.html.converters:

  - Don't import ``render`` and ``sanitize`` to converters module.
    (Reversed in 1.0b5.)

* webhelpers.html.secure_form:

  - Move module to ``webhelpers.pylonslib.secure_form`` because it depends
    on ``pylons.session``.

* webhelpers.misc:

  - New helper ``flatten`` to interpolate embedded lists and tuples.
  - New helper ``subclasses_only`` to extract the subclasses of an abstract
    base class from a module or iterable.

* webhelpers.pylonslib.flash:

  - Moved to its own module.
  - Changed ``Flash.__html__()`` implementation.
  - Categories may be specified in constructor. Patch by Eli Collins.

* webhelpers.pylonslib.grid:

  - Bugfixes.

* webhelpers.pylonslib.minify:

  - Bugfix.

* webhelpers.util:

  - Bugfix: ``parse_qs`` moved from ``cgi`` to ``urlparse`` in Python 2.6.
    Patch by Mike Verdone.

1.0b3 (2009-12-29)
------------------
* webhelpers.feedgenerator:

  - Allow either lat-lon and lon-lat formats in geometry data. The default is
    lat-lon. For lon-lat, set ``GeoFeedMixin.is_input_latitude_first`` to 
    false. (You can set in a subclass or instance before writing the output.)
    lat-lon is the most common format but GeoDjango and some other libraries